@@ -2,6 +2,8 @@
 	- fix: avoid calling getpass twice as side effect of xstrdup macro
 		(katzj@linuxpower.org) (#17672).
 	- sync python bindings with rpm4.
+	- add rpmGetRpmlibProvides() to retrieve rpmlib(...) provides
+		"Pawel A. Gajda" <mis@k2.net.pl>.
 
 3.0.5 -> 3.0.6
 	- python bindings to query and verify signatures.
